--- a/style.css
+++ b/style.css
@@ -1,15 +1,32 @@
 /* === GLOBAL === */
+html{
+    scroll-behavior: smooth;
+}
 body {
     margin: 0;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f5f5f5;
-    color: #333;
+    background-color: #000000;
+    align-items: center;
 }
-
+.Title{
+    position: fixed;
+    border-bottom: 1px solid white;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    top: 0;
+}
+.line{
+    border-bottom: 2px solid white;
+    margin: 20px 0px;
+}
 .container {
+    margin-top: 73px;
     max-width: 1000px;
-    margin: 20px auto;
     padding: 0 20px;
+    border: 1px solid white;
 }
 
 /* === HEADINGS === */
@@ -25,6 +42,11 @@ form#uploadForm {
     gap: 10px;
     justify-content: center;
     margin-bottom: 20px;
+    border: 1px solid white;
+    background-color: white;
+    border-radius: 5px;
+    padding: 5px;
+    margin-top: 30px;
 }
 
 form#uploadForm input[type="text"],
@@ -51,8 +73,13 @@ form#uploadForm button:hover {
 }
 
 /* === SEARCH BAR === */
+.serchcontainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 #searchInput {
-    width: 100%;
+    width: 60%;
     padding: 10px;
     font-size: 16px;
     margin-bottom: 10px;
@@ -148,6 +175,7 @@ button{
     padding: 15px;
     background: #f0f0f0;
     border-radius: 10px;
+    margin-bottom: 20px;
 }
 
 .multi-upload-container h2 {
