--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     justify-content: center;
     width: 100%;
     top: 0;
+    z-index: 999;
 }
 .line{
     border-bottom: 2px solid white;
